--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2643,7 +2643,7 @@ input, select, textarea {
 				.features li {
 					padding: 3em 0 1em 0 ;
 					background-color: transparent !important;
-					border-top: solid 2px #fff;
+					border-bottom: solid 1px grey;
 					width: 100%;
 				}
 
